--- a/app/views/births/multipleBirths3/parentsDetailsChild2/mothers-name-child2.html
+++ b/app/views/births/multipleBirths3/parentsDetailsChild2/mothers-name-child2.html
@@ -188,14 +188,14 @@ href: "javascript:window.history.back()"
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" checked value="england">
-                <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                <input class="govuk-radios__input" id="capitaliseLastName" name="capitaliseLastName" type="radio" checked value="england">
+                <label class="govuk-label govuk-radios__label" for="capitaliseLastName">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
-                <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+                <input class="govuk-radios__input" id="capitaliseLastName-2" name="capitaliseLastName" type="radio" value="scotland">
+                <label class="govuk-label govuk-radios__label" for="capitaliseLastName-2">
                   No - print as typed
                 </label>
               </div>
@@ -220,14 +220,14 @@ href: "javascript:window.history.back()"
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" checked value="england">
-                <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                <input class="govuk-radios__input" id="capitaliseLastNameIfDifferent" name="capitaliseLastNameIfDifferent" type="radio" checked value="england">
+                <label class="govuk-label govuk-radios__label" for="capitaliseLastNameIfDifferent">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
-                <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+                <input class="govuk-radios__input" id="capitaliseLastNameIfDifferent-2" name="capitaliseLastNameIfDifferent" type="radio" value="scotland">
+                <label class="govuk-label govuk-radios__label" for="capitaliseLastNameIfDifferent-2">
                   No - print as typed
                 </label>
               </div>
