--- a/app/views/births/multipleBirths3/02-child-correct-child3.html
+++ b/app/views/births/multipleBirths3/02-child-correct-child3.html
@@ -242,7 +242,7 @@ Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
     </dl>
 
     <p class="govuk-body">
-      <a href="/births/multipleBirths3/01-search-child3.html" class="govuk-link">Add a child</a>
+      <a href="" class="govuk-link">Add a child</a>
     </p><br>
 
     {{ govukRadios({
