--- a/app/views/births/multipleBirths3/02-child3-correct-final.html
+++ b/app/views/births/multipleBirths3/02-child3-correct-final.html
@@ -13,7 +13,7 @@ Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
     </h1>
     
     <div class="header-with-button">
-      
+      <h2 class="govuk-heading-m">Child 3</h2>
     </div>
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
@@ -83,7 +83,7 @@ Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
 
     {{ govukButton({
     text: "Yes, continue",
-    href: "02-child-correct-child3"
+    href: ""
     }) }}
 
     <div class="govuk-form-group">
