final updates for round 3

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,7 +16,7 @@
 
     <p>
       <h3 class="govuk-heading-s" style="display: inline;">Multiple births</h3>
-      <strong class="govuk-tag govuk-tag--yellow">In progress</strong>
+      <strong class="govuk-tag govuk-tag--pink">In research</strong>
     </p>
      
      <p class="govuk-body">
