--- a/app/views/births/multipleBirths3/statsChild2/confidentialChild2.html
+++ b/app/views/births/multipleBirths3/statsChild2/confidentialChild2.html
@@ -218,7 +218,7 @@ href: "javascript:window.history.back()"
               <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="marriageDateKnown-yes" name="marriageDateKnown"
-                    value="MARRIAGE_DATE_KNOWN" data-aria-controls="conditional-marriageDateKnown-yes" checked>
+                    value="MARRIAGE_DATE_KNOWN" data-aria-controls="conditional-marriageDateKnown-yes">
                   <label class="govuk-label govuk-radios__label" for="marriageDateKnown-yes">
                     Yes
                   </label>
@@ -271,7 +271,7 @@ href: "javascript:window.history.back()"
 
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="marriageDateKnown-no" name="marriageDateKnown"
-                    value="MARRIAGE_DATE_UNKNOWN">
+                    value="MARRIAGE_DATE_UNKNOWN" checked>
                   <label class="govuk-label govuk-radios__label" for="marriageDateKnown-no">
                     No
                   </label>
