updated confidential stat question

--- a/app/views/births/multipleBirths3/stats/confidential.html
+++ b/app/views/births/multipleBirths3/stats/confidential.html
@@ -186,10 +186,12 @@ href: "javascript:window.history.back()"
               </div>
             </fieldset>
           </div>
+
+          <!-- 
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="marriageDateKnown-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                Does the informant know the date of the parent's marriage?
+                Does the informant know the date of the child's parents' marriage?
               </legend>
               <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
                 <div class="govuk-radios__item">
@@ -264,6 +266,8 @@ href: "javascript:window.history.back()"
               </div>
             </fieldset>
           </div>
+        -->
+
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="previousMarriageMother-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
