--- a/app/views/births/multipleBirths3/statsChild2/confidentialChild2.html
+++ b/app/views/births/multipleBirths3/statsChild2/confidentialChild2.html
@@ -208,11 +208,11 @@ href: "javascript:window.history.back()"
           </div>
 
 
-
+<!--
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="marriageDateKnown-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                Does the informant know the date of the parent's marriage?
+                Does the informant know the date of the child's parents' marriage?
               </legend>
 
               <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -287,46 +287,7 @@ href: "javascript:window.history.back()"
               </div>
             </fieldset>
           </div>
-
-
-
-          <!-- 
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="marriageDateKnown-hint">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-      Do you know the date of the parent's marriage?
-    </legend>
-
-    <div class="govuk-radios" data-module="govuk-radios">
-    
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" type="radio" id="marriageDateKnown-yes" name="marriageDateKnown"
-               value="MARRIAGE_DATE_KNOWN">
-        <label class="govuk-label govuk-radios__label" for="marriageDateKnown-yes">
-          Yes
-        </label>
-      </div>
-
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" type="radio" id="marriageDateKnown-no" name="marriageDateKnown"
-               value="MARRIAGE_DATE_UNKNOWN">
-        <label class="govuk-label govuk-radios__label" for="marriageDateKnown-no">
-          No
-        </label>
-      </div>
-
-    
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" type="radio" id="marriageDateKnown-refused" name="marriageDateKnown"
-               value="MARRIAGE_DATE_REFUSED">
-        <label class="govuk-label govuk-radios__label" for="marriageDateKnown-refused">
-          Refused to answer
-        </label>
-      </div>
-    </div>
-  </fieldset>
-</div> -->
+        -->
 
 
 
