Fixing notification details

--- a/app/views/births/multipleBirths3/02-child-correct.html
+++ b/app/views/births/multipleBirths3/02-child-correct.html
@@ -139,7 +139,7 @@ Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
           Mother&rsquo;s first name
         </dt>
         <dd class="govuk-summary-list__value">
-          Elizabeth
+          Isabella
         </dd>
         <dd class="govuk-summary-list__actions">
       </div>
